removed Javascript text, added background image, added/styled navBar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <div id="navBar">
+        <ul>
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Education</a></li>
+        </ul>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
