--- a/education.html
+++ b/education.html
@@ -4,6 +4,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>FILLER TEXT</h1>
+        <div id="navBar">
+            <ul>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./education.html">Education</a></li>
+            </ul>
+            </div>
+        <h1>THIS IS THE EDUCATION PAGE</h1>
     </body>
 </html>
