--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <div id="navBar">
         <ul>
-            <li><a>Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Education</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./education.html">Education</a></li>
         </ul>
         </div>
         <script src="./script.js"></script>
