--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <div id="navBar">
+        <h1 id="name">Nico Pasquariello</h1>
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./education.html">Education</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Project Portfolio</a></li>
         </ul>
-        </div>
         <script src="./script.js"></script>
     </body>
 </html>
