added About and Portfolio links, added new background and moved About and Portfolio to the top right of the page in css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1 id="name">Nico Pasquariello</h1>
         <ul>
             <li><a href="">About</a></li>
-            <li><a href="">Project Portfolio</a></li>
+            <li><a href="">Portfolio</a></li>
         </ul>
         <script src="./script.js"></script>
     </body>
