got rid of navBar, making one page with 3 sections, page1 page2 page3, need to get rid of spaces between divs

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1 id="name">Nico Pasquariello</h1>
-        <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Portfolio</a></li>
-        </ul>
+        <div class="page1">
+            <h1 id="title">Nico Pasquariello</h1>
+        </div>
+        
+        <div class="page2">
+            <h2 id="title">About</h2>
+        </div>
+
+        <div class="page3">
+            <h2 id="title">Contact Me</h2>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
