Got rid of whitespace between divs, added background img on page1, changed font for class:title

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     </head>
     <body>
         <div class="page1">
-            <h1 id="title">Nico Pasquariello</h1>
+            <h1 id="name" class="title">Nico Pasquariello</h1>
         </div>
         
         <div class="page2">
-            <h2 id="title">About</h2>
+            <h2 id="about" class="title">About</h2>
         </div>
 
         <div class="page3">
-            <h2 id="title">Contact Me</h2>
+            <h2 id="contact" class="title">Contact Me</h2>
         </div>
         <script src="./script.js"></script>
     </body>
