moved name and softEng to my desired location on page1, looking for good background

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <div class="page1">
+            <div id="page1Main">
             <h1 id="name" class="title">Nico Pasquariello</h1>
+            <h3 id="softEng">Software Engineer</h3>
+            </div>
         </div>
         
         <div class="page2">
