added background color to linkBar, got github link working with a logo picture, moved the logo to top right of page1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <h1 id="name" class="title">Nico Pasquariello</h1>
             <h3 id="softEng">Software Engineer</h3>
             </div>
-            <div id="gitHubIcon">
-                <a href="https://github.com/nicopasq"><img src="https://e7.pngegg.com/pngimages/526/706/png-clipart-github-computer-icons-markdown-github-blue-logo-thumbnail.png" alt="gitHubLogo"></a>
+            <div id="linkBar">
+                <a href="https://github.com/nicopasq" id="imgLink"><img src="./images/My project.png" alt="githubIcon" id="gitHubLogo"></a>
             </div>
         </div>
         
