Added gradient to top of page2, added paragraph to page2, trying to find the right backgorund color for page2 and page3, starting css for 'page2Main'.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="./style.css"/>
-        <title>My Personal Website</title>
-    </head>
-    <body>
-        <div class="page1">
-            <div id="page1Main">
+
+<head>
+    <link rel="stylesheet" href="./style.css" />
+    <title>My Personal Website</title>
+</head>
+
+<body>
+    <div class="page1">
+        <div id="page1Main">
             <h1 id="name" class="title">Nico Pasquariello</h1>
             <h3 id="softEng">Software Engineer</h3>
-            </div>
-            <div id="linkBar">
-                <a href="https://github.com/nicopasq" id="imgLink"><img src="./images/My project.png" alt="githubIcon" id="gitHubLogo"></a>
-            </div>
-        </div>
-        
-        <div class="page2">
-            <h2 id="about" class="title">About</h2>
         </div>
 
-        <div class="page3">
+        <div id="linkBar">
+            <a href="https://github.com/nicopasq"><img src="./images/My project.png" alt="githubIcon"
+                    id="gitHubLogo" /></a>
+            <a href="https://www.linkedin.com/in/nico-pasquariello-929066252/"><img
+                    src="./images/Limav-Flat-Gradient-Social-Linkedin.ico" alt="linkedIn" id="linkedinLogo" /></a>
+        </div>
+    </div>
+
+    <div class="page2">
+        <div id="page2Main">
+            <h2 id="about" class="title">About</h2>
+            <p id="aboutPara">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+                fugit ex rerum eum, reprehenderit saepe praesentium est iste cum
+                aspernatur nihil commodi dolorem accusantium accusamus error, non quas
+                perferendis? Facilis. Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Deserunt nulla itaque, facilis amet reprehenderit
+                quas expedita earum praesentium quaerat. Eveniet laborum minus illum
+                architecto incidunt rem optio rerum reiciendis exercitationem! Lorem
+                ipsum dolor sit amet consectetur adipisicing elit. Itaque tempora,
+                velit commodi repudiandae quos modi aut accusantium excepturi nihil,
+                rem quia. Tenetur assumenda nesciunt facilis voluptatem eum quis
+                officia earum?
+            </p>
+        </div>
+
+        <div id="blackGrad"></div>
+    </div>
+
+    <div class="page3">
+        <div id="page3Main">
             <h2 id="contact" class="title">Contact Me</h2>
         </div>
-        <script src="./script.js"></script>
-    </body>
+    </div>
+    <script src="./script.js"></script>
+</body>
+
 </html>
