trying to add background music to entire webpage, added music file, added audio html tag, need to get it to autoplay

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="./style.css" />
     <title>My Personal Website</title>
 </head>
-
+<!-- <audio id="introSong" controls autoplay>
+    <source src="./Music/CZARFACE x MF DOOM - Break in the Action (Instrumental) (1).mp3" type="audio/mpeg">
+  </audio> -->
 <body>
     <div class="page1">
         <div id="page1Main">
